[gd_scene load_steps=6 format=3 uid="uid://codck442xsoqk"]

[ext_resource type="Theme" path="res://assets/theme.tres" id="1_t86w4"]
[ext_resource type="Script" path="res://scenes/game_over/game_over.gd" id="1_v0at3"]

[sub_resource type="Animation" id="Animation_gxmu4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1j5tu"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jnoix"]
_data = {
"RESET": SubResource("Animation_gxmu4"),
"fade_in": SubResource("Animation_1j5tu")
}

[node name="GameOver" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_v0at3")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t86w4")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="GameOverText" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Game Over!"
horizontal_alignment = 1

[node name="FinalScore" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Final score: 1234"
horizontal_alignment = 1

[node name="NewHighscore" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "New Highscore!"
horizontal_alignment = 1

[node name="Stats" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Shots fired: 1234
Enemies killed: 1234
"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jnoix")
}
